public/frontend/styles/style.css
/* ... */
.leaderboard .leaderboard__item:not(:last-child) {
    margin-bottom: 1rem;
}

.leaderboard .leaderboard__regular {
    background: var(--gt-leaderboard-regular-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard .leaderboard__gold {
    background: var(--gt-leaderboard-gold-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

.leaderboard .leaderboard__silver {
    background: var(--gt-leaderboard-silver-bg);
    color: var(--gt-leaderboard-color-bg-dark);
}

.leaderboard .leaderboard__bronze {
    background: var(--gt-leaderboard-bronze-bg);
    color: var(--gt-leaderboard-color-bg-dark);
}

.leaderboard__rank .rank__icon,
.leaderboard__rank .rank__name {
    display: inline-block;
    margin: 0;
}

.rank__name span {
    display: block;
}

.leaderboard__item .leaderboard__rank {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
}

.leaderboard__item .leaderboard__rank>.rank__icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-right: 1rem;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    background-color: rgb(255 255 255 / 40%);
    text-align: center;
}

.leaderboard__item .leaderboard__rank>.rank__icon img {
    width: 24px;
    height: 24px;
}

.leaderboard__item .leaderboard__point {
    min-width: 64px;
    padding: .5rem .75rem;
    text-align: center;
    border-radius: var(--bs-border-radius-pill);
}

.leaderboard__gold .leaderboard__point,
.leaderboard__silver .leaderboard__point,
.leaderboard__bronze .leaderboard__point {
    background-color: var(--gt-leaderboard-regular-bg);
    color: var(--gt-leaderboard-color-bg-light);
}

/* Inputs */

.input-group-text {
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
    padding: 0.5rem 0.75rem;;
    border: none;
}

.input-group>.form-floating:not(:first-child)>.form-control,
.input-group>.form-floating:not(:first-child)>.form-select,
.input-group> :not(:first-child):not(.dropdown-menu):not(.form-floating):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
    margin-left: 0;
}

.custom-form-control {
    border-top-left-radius: 3rem;
    border-bottom-left-radius: 3rem;
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    border: none;
    padding: 0.5rem 0.75rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
}

.custom-form-control::placeholder {
    color: var(--bs-white);
}

.input-group .custom-form-control {
    border-top-right-radius: 3rem;
    border-bottom-right-radius: 3rem;
    border: none;
    padding: 0.5rem 1.5rem;
    background-color: rgb(234 237 240 / 60%);
    color: var(--bs-white);
}

.chip-wrapper {
    width: 100%;
}

.chip {
    --gt-chip-active-bg: linear-gradient(57.35deg, #E8B363 6.86%, #E8BA6E 38.33%, #EFCC8F 51.33%, #E4B577 67.63%, #E39A3E 90.8%);
    --gt-chip-disabled-bg: #7d001e;
    --gt-chip-bg: rgb(255 255 255 / 50%);
    --gt-chip-color-bg-light: #000000;
    --gt-chip-color-bg-dark: #ffffff;
    display: inline-block;
    background: var(--gt-chip-bg);
    color: var(--gt-chip-color-bg-dark);
    font-weight: 400;
    border: 0;
    border-radius: var(--bs-border-radius-pill);
    padding: .5rem 1.25rem;
    text-decoration: none;
}

.chip:hover {
    color: var(--gt-yellow);
}

.chip.active {
    background: var(--gt-chip-active-bg);
    color: var(--gt-chip-color-bg-light);
}

.chip.disabled {
    background: var(--gt-chip-disabled-bg);
    color: var(--gt-chip-color-bg-dark);
    opacity: 0.4;
}

.socials {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.socials .social-icon {
    margin: 0 1rem;
}

.social-icon {
    max-width: 24px;
}

.shops {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.shops .shop-icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-right: 1rem;
    margin-bottom: .5rem;
    border-radius: 50%;
    width: 48px;
    height: 48px;
    background-color: rgb(255 255 255 / 40%);
    text-align: center;
}

.hashtags {
    font-weight: bold;
    margin-right: 0.5rem;
    color: var(--bs-white);
}

.profile {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: flex-start;
}

.profile .profile-img {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    margin-right: 1rem;
}

.profile-img>img {
    width: 64px;
    height: 64px;
    border-radius: var(--bs-border-radius-pill);
    margin-right: 1rem;
}

.profile .profile-name {
    margin-bottom: 1rem;
}

.profile .profile-info:not(:last-child) {
    margin-bottom: 0;
}

.profile .profile-info:last-child {
    margin-bottom: 1rem;
}

.card-thumbnail {
    display: inline-block;
    text-align: center;
}

.card-thumbnail img {
    width: auto;
    height: 200px;
}

.profile .logout-btn {
    --bs-btn-padding-x: 1rem;
}

.profile-reward {
    display: none;
    text-align: center;
}

.profile-reward img {
    max-width: 100%;
    height: 250px;
}

@media screen and (max-width: 991px) {
    .profile {
        align-items: center;
    }

    .profile .logout-btn {
        display: none;
    }

    .profile .profile-name {
        margin-bottom: .5rem;
    }

    .profile .profile-img,
    .profile-img > img {
        margin-right: 0;
    }

    .profile-img > img {
        width: 96px;
        height: 96px;
    }

    .chip-wrapper {
        flex-wrap: nowrap;
        overflow-x: scroll;
    }

    .goodtime_product {
        display: none;
    }

    .goodtime_card_preview {
        display: none;
    }
}
/* ... */

